--- a/tests/SConscript
+++ b/tests/SConscript
@@ -10,7 +10,7 @@ SOURCES = [
  os.path.join(GTEST_ROOT, 'src/gtest-all.cc'),
 ] + Glob('*.cc') + Glob('*.c') + Glob('**/*.c')
 
-env['LIBS'] = ['fscript_lua'] + env['LIBS']
+env['LIBS'] = ['fscript_lua', 'lua'] + env['LIBS']
 env.Program(os.path.join(BIN_DIR, 'runTest'), SOURCES);
 
 
